# species_project

./: README.md
definitive/: CMakeLists.txt  data_main_definitive.cpp  data_main_temporary.cpp  evolution_plotter.gp  input_output.cpp  input_output.hpp  parameters.cpp  parameters.hpp  prime_plotter.gp  simulation.cpp  simulation.hpp  test.gp  unit_test.cpp
sketch/: CMakeLists.txt  basic_main.cpp  data_main.cpp  datamain  graphic_main.cpp  graphics.cpp  graphics.hpp  input_interface.cpp  input_interface.hpp  main_graph  main_test  parameters.cpp  parameters.hpp  plot  plot_main.cpp  species.cpp  species.hpp  species_log.txt  test  testplot.gp  unit_test.cpp
